--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title                    : "Sailendu Biswal/ Site Title"
 title_separator          : "-"
 name                     : &name "Sailendu Biswal"
 description              : &description "personal description"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://sailendu91.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "sailendu91/sailendu91.github.io"
 
