--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Sailendu Biswal/ Site Title"
+title                    : "Sailendu Biswal"
 title_separator          : "-"
 name                     : &name "Sailendu Biswal"
 description              : &description "personal description"
